--- a/index.html
+++ b/index.html
@@ -47,6 +47,31 @@
         <img src="" alt="imagen">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto tempore distinctio consequuntur animi neque fugiat aliquam labore sapiente, ipsa molestiae maxime et perspiciatis optio in aut enim cumque illo tempora!</p>
     </header>
+    <section>
+        <div>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                  </div>
+                </div>
+               <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
     
 
 
